2002-05-20  Carlos Perello Marin <carlos@gnome-db.org>

	* translation-status.xml: More fixes.

2002-05-20  Carlos Perello Marin <carlos@gnome-db.org>

	* translation-status.xml: Added Xchat for GNOME 2.0.

2002-05-19  Carlos Perello Marin <carlos@gnome-db.org>

	* The new intltool release manage much more better the modules names
	so we can fix them here.

2002-05-18  Carlos Perello Marin <carlos@gnome-db.org>

	* translation-status.xml: Small fixes.

2002-05-06  Abel Cheung  <maddog@linux.org.hk>

	* README: Removed.
	* src/compile.sh: Add missing -lpopt.

2002-05-05  Carlos Perello Marin <carlos@gnome-db.org>

	* src/html-reports.c: Lots of memory leaks fixes. Now the application
	gets only one or two Mb long instead of the 405Mb it was getting :-(.
	We use now GString instead of char * directly.
	* src/main.c: Small change to be able to debug the application
	more easily. I will revert all changes after all memory leaks gets
	fixed.
	* src/po-management.c: Small bug fixed.
	* src/xml-parser.c: fixed a memory leak.

2002-05-05  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml:
	- Removed dead modules:
	  achtung aptivate ammonite dryad erdos g-print galf ganimal
	  gnop GtkRio500 Gum gxsnmp2 gwhois moiss libgtop-docu
	  libgtop-examples rcedit telegnome trackerg trilobite
	- And battstat_applet, which is in gnome-applets now.
	- Move gimp-freetype and uf-view HEAD to gnome-2.0-extras
	- Added 2.0 branch for pong
	- Corrected 1.4 branch for pybliographer, radioactive, x-s-t

2002-05-02  Carlos Perello Marin <carlos@gnome-db.org>

	* src/status.c: Removed, we have splitted it.
	* src/main.c: Added with popt support.
	* src/po-management.c: Added for all .po work.
	* src/xml-parser.c: Parser for translation-status.xml
	* src/html-reports.c: Added, generate all .html reports.
	* *.pl: Removed. They are not needed any more ;-)

2002-05-02  Carlos Perello Marin <carlos@gnome-db.org>

	* translation-status.dtd: Small change to be able to use names