@@ -470,6 +470,15 @@
 	<download/>
       </component>
     </version>
+    <version release="gnome-2.0-fifth-toe">
+      <component name="galeon" dir="galeon">
+	<podir dir="po"/>
+	<potname name="galeon-2.0.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
   </module>
   <module name="garp">
     <version release="gnome-1.4-extras">
