@@ -1,3 +1,7 @@
+2002-05-26  Abel Cheung  <maddog@linux.org.hk>
+
+	* translation-status.xml: Add galeon for 2.0 branch.
+
 2002-05-20  Carlos Perello Marin <carlos@gnome-db.org>
 
 	* translation-status.xml: More fixes.
